--- a/indexTributo.html
+++ b/indexTributo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styleTributo.css">
+    <link rel="stylesheet" href="./styles/styleTributo.css">
     <title>Steve Jobs</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Merriweather:ital,wght@1,300&family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div id="img-div">
-            <img id="image" src="styles/imgtrib1.jpg" alt="Steve Jobs">
+            <img id="image" src="./styles/imgtrib1.jpg" alt="Steve Jobs">
             <legend id="img-caption">Ilustración de Steve Jobs</legend>
         </div>
         <h1 id="title">Steve Jobs<br /><em>"El Visionario"</em></h1>
